2010-03-31  Kai Tietz  <kai.tietz@onevision.com>

	* assert.h (assert): Add default ASCII version.

2010-03-14  Jonathan Yong  <jon_y@users.sourceforge.net>
	* math.h (frexp): Remove pure attribute.
	(modf): ditto.
	(sincos): ditto.
	(sincosl): ditto.
	(sincosf): ditto.
	(frexpf): ditto.
	(frexpl): ditto.

2010-02-02  Ozkan Sezer  <sezeroz@gmail.com>

	* profile.h: Remove advertising clause of copyright. For reference, see:
	ftp://ftp.cs.berkeley.edu/pub/4bsd/README.Impt.License.Change
	Closes our bug #2939623.

2010-02-01  Ozkan Sezer  <sezeroz@gmail.com>

	* _mingw_print_pop.h: Don't undefine/redifine the inttypes.h
	SCN* macros, because we don't have a __mingw_scanf() family
	implementation yet. Ifdef'ed the relevant portions by the yet
	non-defined HAVE_MINGW_SCANF_IMPL macro.
	* _mingw_print_push.h: Likewise.

2010-01-29  Ozkan Sezer  <sezeroz@gmail.com>

	* stdarg.h: Separate our stdarg.h into two, one which is the gcc-
	provided header and the other as _mingw_stdarg.h. Make stdarg.h include
	_mingw_stdarg.h.
	* float.h: Separate our float.h into two, one which is the gcc-
	provided header and the other as _mingw_float.h. Make float.h include
	_mingw_float.h. Fix confused license.
	* _mingw_float.h: New.
	* _mingw_stdarg.h: New.

2010-01-29  Ozkan Sezer  <sezeroz@gmail.com>

	* stdarg.h: Sync with the gcc PR c++/36799 fix from
	gcc trunk 2009-03-27/r145106.

2010-01-26  Jonathan Yong  <jon_y@users.sourceforge.net>

	* getopt.h: Sync with mingw.org, it is also now PD
	instead of BSD 4 clause.

2010-01-23  Kai Tietz  <kai.tietz@onevision.com>

	* crt/_mingw.h: Add SDK include of sdks/_mingw_ddk.h.

2010-01-14  Kai Tietz  <kai.tietz@onevision.com>

        * tchar.h (PTCHAR, TBYTE, PTBYTE): Added.

2010-01-07  Jonathan Yong  <jon_y@users.sourceforge.net>

	* math.h (sin): Add GCC pure attribute.
	(cos): Ditto.
	(tan): Ditto.
	(sinh): Ditto.
	(cosh): Ditto.
	(tanh): Ditto.
	(asin): Ditto.
	(acos): Ditto.
	(atan): Ditto.
	(atan2): Ditto.
	(exp): Ditto.